# -Automation_Network

Downloads/files (3)/: .gitignore  app.py  config.py  models.py  requirements.txt
Downloads/files (3)/DriveGuardFile/: .gitignore  build_lambda_packages.ps1  setup_aws_firebase.py
Downloads/files (3)/DriveGuardFile/aws_infrastructure/: lambda_credential_proxy.py  lambda_license_manager.py
Downloads/files (3)/DriveGuardFile/terraform/: lambda.tf  main.tf  outputs.tf  variables.tf
Downloads/files (3)/blueprints/: admin.py  ai_intelligence.py  api.py  downloads.py  location.py  mesh.py  node_client.py  payments.py  vpn.py  zero_trust.py
Downloads/files (3)/califaxvpn/califax_core/: Cargo.toml
Downloads/files (3)/califaxvpn/califax_core/califax-ai/: Cargo.toml
Downloads/files (3)/califaxvpn/califax_core/califax-crypto/: Cargo.toml
Downloads/files (3)/califaxvpn/califax_core/califax-crypto/src/: error.rs  hybrid.rs  keystore.rs  lib.rs  pqc.rs  symmetric.rs
Downloads/files (3)/califaxvpn/califax_core/califax-identity/: Cargo.toml
Downloads/files (3)/califaxvpn/califax_core/califax-identity/src/: access.rs  canary.rs  did.rs  error.rs  lib.rs  zk_proof.rs
Downloads/files (3)/califaxvpn/califax_core/califax-location/: Cargo.toml
Downloads/files (3)/califaxvpn/califax_core/califax-mesh/: Cargo.toml
Downloads/files (3)/califaxvpn/califax_core/califax-mesh/src/: circuit.rs  dht.rs  error.rs  gossip.rs  healing.rs  lib.rs  onion.rs  peer.rs
Downloads/files (3)/califaxvpn/califax_core/califax-node/: Cargo.toml
Downloads/files (3)/califaxvpn/califax_core/califax-node/src/: auth.rs  config.rs  handlers.rs  main.rs  wireguard.rs
Downloads/files (3)/califaxvpn/califax_core/califax-pyo3/: Cargo.toml  pyproject.toml
Downloads/files (3)/califaxvpn/califax_core/califax-tunnel/: Cargo.toml
Downloads/files (3)/califaxvpn/califax_core/califax-tunnel/src/: double_tunnel.rs  error.rs  failover.rs  lib.rs  obfuscation.rs  protocol.rs  smart_switch.rs
Downloads/files (3)/califaxvpn/client/: package.json  tailwind.config.js
Downloads/files (3)/califaxvpn/contracts/: foundry.toml
Downloads/files (3)/califaxvpn/contracts/script/: Deploy.s.sol
Downloads/files (3)/califaxvpn/ml_pipeline/: export_onnx.py  requirements.txt  train_anomaly_model.py  train_route_optimizer.py  train_threat_detector.py
Downloads/files (3)/califaxvpn/server/: node_api.py  requirements.txt  wg_manager.py
Downloads/files (3)/califaxvpn/terraform/: main.tf  outputs.tf  variables.tf
Downloads/files (3)/terraform/: deploy.sh  main.tf  outputs.tf  setup_certbot.sh  user_data.sh  variables.tf
(+36 files in other folders)
