[package]
name = "califax-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
califax-crypto = { path = "../califax-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
