[package]
name = "califax-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
califax-crypto = { path = "../califax-crypto" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
